test/2/type/poly-val-is-set-of-dom.ploy
extensible x;
x += 0
x += ''

f = fn (Int|Str)%Void;

main = f.x
